--- a/sistema_config/sistemaEducacion/Templates/Administrador/admin_user.html
+++ b/sistema_config/sistemaEducacion/Templates/Administrador/admin_user.html
@@ -47,18 +47,18 @@
           <thead>
             <tr>
               <th>RUT</th>
-              <th>Nombre</th>
-              <th>Usuario</th>
+              <th>Correo</th>
               <th>Contraseña</th>
+              <th>Rol</th>
             </tr>
           </thead>
           <tbody>
-            {% for user in users %}
+            {% for user in usuarios %}
             <tr data-toggle="modal" data-target="#alumnoModal">
-              <td>{{ user.id_usuario }}</td>
-              <td>{{ user.correo }}</td>
-              <td>{{ user.contrasenia }}</td>
-              <td>{{ user.nombre_rol }}</td>
+              <td>{{ user.0 }}</td>
+              <td>{{ user.1 }}</td>
+              <td>{{ user.2 }}</td>
+              <td>{{ user.3 }}</td>
             </tr>
             {% endfor %}
             <!-- Agrega más filas para otros alumnos -->
