--- a/sistema_config/sistemaEducacion/Templates/Apoderados_Alumnos/revisar_notas.html
+++ b/sistema_config/sistemaEducacion/Templates/Apoderados_Alumnos/revisar_notas.html
@@ -7,6 +7,7 @@
         color: red;
     }
 </style>
+<a type="button" class="btn btn-secondary" href="{% url 'apoderado' %}">⬅ Volver</a>
 <h1 class="titCurso" style="text-align: center;">Notas Asignatura</h1>
 <div style="padding: 2%;">
 
