--- a/sistema_config/sistemaEducacion/Templates/Profesor/calificar.html
+++ b/sistema_config/sistemaEducacion/Templates/Profesor/calificar.html
@@ -7,6 +7,8 @@
         color: red;
     }
 </style>
+
+<a type="button" class="btn btn-secondary" href="{% url 'sistema_Profe' %}">⬅ Volver</a>
 <h1 class="titCurso" style="text-align: center;">Calificar Alumnos</h1>
 <div style="padding: 2%;">
 
