--- a/sistema_config/sistemaEducacion/Templates/Profesor/planificar.html
+++ b/sistema_config/sistemaEducacion/Templates/Profesor/planificar.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Semana 1</label>
-                        <textarea class="form-control shadow" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <textarea class="form-control shadow" id="exampleFormControlTextarea1" name="semana1" rows="3"></textarea>
                     </div>
                     <div class="mb-3">
                         <label for="exampleFormControlTextarea1" class="form-label">Semana 2</label>
