--- a/sistema_config/sistemaEducacion/Templates/iniciar_sesion.html
+++ b/sistema_config/sistemaEducacion/Templates/iniciar_sesion.html
@@ -8,12 +8,12 @@
         <form method="POST" class="formularioSes">
             {% csrf_token %}
             <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Usuario</label>
-                <input style="border: 1px solid black;" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ejemplo: Manuel">
+                <label for="correo" class="form-label">Usuario</label>
+                <input style="border: 1px solid black;" type="text" class="form-control" id="correo" name="correo" placeholder="Ejemplo: Manuel@algo">
             </div>
             <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Contraseña</label>
-                <input style="border: 1px solid black;" type="password" class="form-control" id="exampleFormControlInput1" placeholder="Contraseña"></input>
+                <label for="contrasenia" class="form-label">Contraseña</label>
+                <input style="border: 1px solid black;" type="password" class="form-control" id="contrasenia" name="contrasenia" placeholder="Contraseña"></input>
             </div>
             <div style="text-align: center;">
                 <a href="" style="text-decoration: none; color: rgb(0, 0, 0);">¿Olvidaste tu contraseña?</a>
@@ -21,7 +21,13 @@
             <div style="text-align: center; margin-top: 4%;">
                 <button type="submit" class="btn btn-primary">Inicar Sesion</button>
             </div>
+            <div style="text-align: center;">
+                {{ mensaje }}
+            </div>
         </form>
+
+        
+
     </div>
 </div>
 
