--- a/sistema_config/sistemaEducacion/Templates/Profesor/calificar.html
+++ b/sistema_config/sistemaEducacion/Templates/Profesor/calificar.html
@@ -29,56 +29,56 @@
             <!-- Alumno 1 -->
             <tr>
                 <td>Alejandro López</td>
-                <td>5.0</td>
-                <td>6.0</td>
-                <td>4.0</td>
-                <td class="nota-roja">3.5</td>
-                <td>6.0</td>
-                <td>5.5</td>
+                <td contenteditable="true">5.0</td>
+                <td contenteditable="true">6.0</td>
+                <td contenteditable="true">4.0</td>
+                <td contenteditable="true" class="nota-roja">3.5</td>
+                <td contenteditable="true">6.0</td>
+                <td contenteditable="true">5.5</td>
                 <td>5.1</td>
             </tr>
             <!-- Alumno 2 -->
             <tr>
                 <td>Ana Rodríguez</td>
-                <td>6.5</td>
-                <td>4.0</td>
-                <td class="nota-roja">3.0</td>
-                <td>5.5</td>
-                <td>6.5</td>
-                <td>7.0</td>
+                <td contenteditable="true">6.5</td>
+                <td contenteditable="true">4.0</td>
+                <td contenteditable="true" class="nota-roja">3.0</td>
+                <td contenteditable="true">5.5</td>
+                <td contenteditable="true">6.5</td>
+                <td contenteditable="true">7.0</td>
                 <td>5.2</td>
             </tr>
             <!-- Alumno 3 -->
             <tr>
                 <td>Carlos Martínez</td>
-                <td>4.5</td>
-                <td>6.5</td>
-                <td>5.0</td>
-                <td>6.5</td>
-                <td>4.5</td>
-                <td>6.0</td>
+                <td contenteditable="true">4.5</td>
+                <td contenteditable="true">6.5</td>
+                <td contenteditable="true">5.0</td>
+                <td contenteditable="true">6.5</td>
+                <td contenteditable="true">4.5</td>
+                <td contenteditable="true">6.0</td>
                 <td>5.3</td>
             </tr>
             <!-- Alumno 4 -->
             <tr>
                 <td>Laura Pérez</td>
-                <td>6.0</td>
-                <td>5.0</td>
-                <td>6.5</td>
-                <td>6.0</td>
-                <td>4.5</td>
-                <td>5.0</td>
+                <td contenteditable="true">6.0</td>
+                <td contenteditable="true">5.0</td>
+                <td contenteditable="true">6.5</td>
+                <td contenteditable="true">6.0</td>
+                <td contenteditable="true">4.5</td>
+                <td contenteditable="true">5.0</td>
                 <td>5.4</td>
             </tr>
             <!-- Alumno 5 -->
             <tr>
                 <td>Juan García</td>
-                <td>4.5</td>
-                <td>4.0</td>
-                <td>5.5</td>
-                <td>6.0</td>
-                <td>6.5</td>
-                <td>6.0</td>
+                <td contenteditable="true">4.5</td>
+                <td contenteditable="true">4.0</td>
+                <td contenteditable="true">5.5</td>
+                <td contenteditable="true">6.0</td>
+                <td contenteditable="true">6.5</td>
+                <td contenteditable="true">6.0</td>
                 <td>5.2</td>
             </tr>
         </tbody>
